--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,15 @@
     "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "intl:extract": "react-intl-universal-extract --cmd extract --source-path ./src --output-path ./src/locales/en-US.json --verbose"
   },
   "proxy": "http://localhost:3001",
   "dependencies": {
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl-universal": "^2.9.1",
     "react-json-view": "1.21.3"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-intl-universal-extract": "^1.0.6",
     "react-router-dom": "^6.19.0",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
