--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "dataservice",
     "API"
   ],
-  "author": "Samuel Hsin",
+  "author": "Samuel Hsin <caramels@gmail.com> (https://github.com/datafe)",
   "license": "(MIT OR Apache-2.0)"
 }
